feat: enhance EDR agent monitors, remediation actions, simulation scenarios, and frontend UI